--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@handsontable/react": "^14.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -18,6 +19,7 @@
     "driver.js": "^0.9.8",
     "echarts": "^4.7.0",
     "file-saver": "^2.0.2",
+    "handsontable": "^14.6.1",
     "js-cookie": "^2.2.1",
     "jszip": "^3.4.0",
     "less": "^3.9.0",
@@ -37,9 +39,12 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^5.8.2",
+    "react-spreadsheet": "^0.9.5",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "scheduler": "^0.23.2",
     "screenfull": "^5.0.2",
     "script-loader": "^0.7.2",
     "xlsx": "^0.18.5"
